Fixed bug with overflowing the page

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -1,5 +1,9 @@
 @use "../utilities" as *;
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     background-color: var(--clr-neutral-100);
 }
