--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -87,10 +87,10 @@
         position: absolute;
         top: 0;
         left: 0;
-        height: 100vh;
-        height: 100dvh;
-        width: 100vw;
-        width: 100dvw;
+        height: 95vh;
+        height: 95dvh;
+        width: 95vw;
+        width: 95dvw;
         border: 0;
         background-color: transparent;
         transition: all .25s;
